# dwmbar-k

./: .gitignore  CMakeLists.txt  README.md  dwmbar.conf  dwmbar.sh  install.sh  launch.sh  makefile
.github/workflows/: cmake.yml  make.yml
docs/: module-template.md
inc/: battery.hpp  bluetooth.hpp  brightness.hpp  chronolog.hpp  claude.hpp  config.hpp  cpu.hpp  dwmbar.hpp  media.hpp  memory.hpp  module.hpp  moduleregistry.hpp  network.hpp  signal.hpp  storage.hpp  throttling.hpp  time.hpp  toggl.hpp  volume.hpp  weather.hpp  winconnect.hpp
include/: config.h  config.hpp  dwmbar-k.h  dwmbar-k.hpp
lib/: std-k.hpp
lib/src/: std-k.cpp
modules/: battery-k.cpp  bluetooth-k.cpp  dwm_alsa.sh  dwm_date.sh  dwm_networkmanager.sh  dwm_paralell.sh  dwm_playerctl.sh  dwm_weather.sh  media-k.cpp  network-k.cpp  time-k.cpp  volume-k.cpp  weather-k.cpp
src/: ExecCmd.cpp  battery.cpp  bluetooth.cpp  brightness.cpp  chronolog.cpp  claude.cpp  config.cpp  cpu.cpp  dwmbar-k.cpp  dwmbar.cpp  media.cpp  memory.cpp  module.cpp  moduleregistry.cpp  network.cpp  signal.cpp  storage.cpp  throttling.cpp  time.cpp  toggl.cpp  volume.cpp  weather.cpp  winconnect.cpp  wrapper.cpp
